[package]
name = "pennsieve-rust"
version = "0.13.0"
authors = ["Pennsieve <https://github.com/Pennsieve/pennsieve-rust>"]
publish = false
edition = "2018"

[features]
mocks = []

[dependencies]
base64-url = "1.4.9"
chrono = { version = "^0.4", features = ["serde"] }
sha2 = "^0.8"
failure = "^0.1"
failure_derive = "^0.1"
futures = "^0.1"
hyper = "^0.12"
hyper-tls = "^0.3"
itertools = "^0.8"
lazy_static = "^1.4"
log = "^0.4"
rand = "^0.7"
rusoto_cognito_idp = "0.42.0"
rusoto_core = "0.42.0"
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
tokio = "^0.1"
url = "^2.1"

[dev-dependencies]
mockito = "0.30.0"
